--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,21 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.11.0
+  flutter_app_name: ^0.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/image.png"
+  adaptive_icon_background: "#ffffff" # Opsional untuk Android
+  adaptive_icon_foreground: "assets/icon/image.png" # Opsional
+
+flutter_app_name:
+  name: "Simple Todo App"
 
 # The following section is specific to Flutter packages.
 flutter:
